--- a/bycoders/.gitignore
+++ b/bycoders/.gitignore
@@ -2,7 +2,9 @@ HELP.md
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-**/target/
+/target/
+*/target/**
+**/target/**
 
 ### STS ###
 .apt_generated
